перенёс выбор языка в .env

--- a/.env.dist
+++ b/.env.dist
@@ -18,6 +18,8 @@ STORAGE_URL = //storage.yii2-core.dev
 
 # Other
 # -----
+LANGUAGE = en-US
+
 FRONTEND_COOKIE_VALIDATION_KEY = <generated_key>
 BACKEND_COOKIE_VALIDATION_KEY = <generated_key>
 
