правки по конфигурации домена

--- a/.env.dist
+++ b/.env.dist
@@ -12,9 +12,9 @@ DB_TABLE_PREFIX =
 
 # Urls
 # ----
-FRONTEND_URL = //yii2-core.dev
-BACKEND_URL = //backend.yii2-core.dev
-STORAGE_URL = //storage.yii2-core.dev
+FRONTEND_URL = http://yii2-core.dev
+BACKEND_URL = http://backend.yii2-core.dev
+STORAGE_URL = http://storage.yii2-core.dev
 
 # Other
 # -----
