--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
     "require": {
         "php": ">=5.4.0",
         "ext-intl": "*",
+        "ext-mbstring": "*",
+        "ext-mcrypt": "*",
         "yiisoft/yii2": ">=2.0.6",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
