вынес настройки ссылок на ассеты в .env

--- a/.env.dist
+++ b/.env.dist
@@ -26,6 +26,8 @@ BACKEND_COOKIE_VALIDATION_KEY = <generated_key>
 ADMIN_EMAIL = admin@yii2-core.dev
 ROBOT_EMAIL = robot@yii2-core.dev
 
+LINK_ASSETS = true
+
 # Disqus
 # ------
 SHORT_NAME = yii2-core
