добавил настройку часового пояса в .env

--- a/.env.dist
+++ b/.env.dist
@@ -18,6 +18,7 @@ STORAGE_URL = http://storage.yii2-core.dev
 
 # Other
 # -----
+TIMEZONE = UTC
 LANGUAGE = en-US
 
 FRONTEND_COOKIE_VALIDATION_KEY = <generated_key>
