--- a/composer.json
+++ b/composer.json
@@ -46,12 +46,13 @@
     },
     "scripts": {
         "post-root-package-install": [
-            "php -r \"copy('.env.dist', '.env');\""
+            "php -r \"file_exists('.env') || copy('.env.dist', '.env');\""
         ]
     },
     "config": {
         "process-timeout": 1800,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "preferred-install": "dist"
     },
     "extra": {
         "asset-installer-paths": {
