--- a/vagrant/nginx/app.conf
+++ b/vagrant/nginx/app.conf
@@ -2,6 +2,7 @@
 server {
     charset utf-8;
     client_max_body_size 128M;
+    sendfile off;
 
     listen 80; ## listen for ipv4
     #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
@@ -41,6 +42,7 @@ server {
 server {
     charset utf-8;
     client_max_body_size 128M;
+    sendfile off;
 
     listen 80; ## listen for ipv4
     #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
@@ -80,6 +82,7 @@ server {
 server {
     charset utf-8;
     client_max_body_size 128M;
+    sendfile off;
 
     listen 80; ## listen for ipv4
     #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
