заменил post-root-package-install на post-update-cmd в composer.json для копирования .env
+ fix namespace в мейл шаблонах

--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
         "samdark/yii2-webshell": "*"
     },
     "scripts": {
-        "post-root-package-install": [
+        "post-update-cmd": [
             "php -r \"file_exists('.env') || copy('.env.dist', '.env');\""
         ]
     },
