--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "vlucas/phpdotenv": "*",
         "beaten-sect0r/yii2-db-manager": "*",
         "samdark/sitemap": "*",
+        "developeruz/yii2-db-rbac": "*",
         "vova07/yii2-imperavi-widget": "*",
         "vova07/yii2-fileapi-widget": "*",
         "creocoder/yii2-taggable": "*",
