--- a/.env.dist
+++ b/.env.dist
@@ -27,7 +27,7 @@ BACKEND_COOKIE_VALIDATION_KEY = <generated_key>
 ADMIN_EMAIL = admin@yii2-core.dev
 ROBOT_EMAIL = robot@yii2-core.dev
 
-LINK_ASSETS = true
+LINK_ASSETS = false
 
 # Disqus
 # ------
