добавил файл конфигурации bower

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "ext-intl": "*",
         "ext-mbstring": "*",
         "ext-mcrypt": "*",
-        "yiisoft/yii2": ">=2.0.6",
+        "yiisoft/yii2": "~2.0.6",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "vlucas/phpdotenv": "*",
