--- a/vagrant/nginx/app.conf
+++ b/vagrant/nginx/app.conf
@@ -117,3 +117,35 @@ server {
         deny all;
     }
 }
+
+# pma
+server {
+    charset utf-8;
+    client_max_body_size 128M;
+    sendfile off;
+
+    listen 80; ## listen for ipv4
+    #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
+
+    server_name pma.yii2-core.dev;
+    root /app/phpmyadmin/;
+    index index.php;
+
+    # uncomment to avoid processing of calls to non-existing static files by Yii
+    #location ~ \.(js|css|png|jpg|gif|swf|ico|pdf|mov|fla|zip|rar)$ {
+    #    try_files $uri =404;
+    #}
+    #error_page 404 /404.html;
+
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        #fastcgi_pass 127.0.0.1:9000;
+        fastcgi_pass unix:/var/run/php5-fpm.sock;
+        try_files $uri =404;
+    }
+
+    location ~ /\.(ht|svn|git) {
+        deny all;
+    }
+}
