--- a/vagrant/nginx/app.conf
+++ b/vagrant/nginx/app.conf
@@ -29,7 +29,7 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         #fastcgi_pass 127.0.0.1:9000;
-        fastcgi_pass unix:/var/run/php5-fpm.sock;
+        fastcgi_pass unix:/var/run/php/php7.0-fpm.sock;
         try_files $uri =404;
     }
 
@@ -69,7 +69,7 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         #fastcgi_pass 127.0.0.1:9000;
-        fastcgi_pass unix:/var/run/php5-fpm.sock;
+        fastcgi_pass unix:/var/run/php/php7.0-fpm.sock;
         try_files $uri =404;
     }
 
@@ -109,7 +109,7 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         #fastcgi_pass 127.0.0.1:9000;
-        fastcgi_pass unix:/var/run/php5-fpm.sock;
+        fastcgi_pass unix:/var/run/php/php7.0-fpm.sock;
         try_files $uri =404;
     }
 
@@ -141,7 +141,7 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         #fastcgi_pass 127.0.0.1:9000;
-        fastcgi_pass unix:/var/run/php5-fpm.sock;
+        fastcgi_pass unix:/var/run/php/php7.0-fpm.sock;
         try_files $uri =404;
     }
 
