composer-asset-plugin
The "extra.asset-installer-paths" option is deprecated, use the "config.fxp-asset.installer-paths" option

--- a/composer.json
+++ b/composer.json
@@ -53,12 +53,12 @@
     "config": {
         "process-timeout": 1800,
         "optimize-autoloader": true,
-        "preferred-install": "dist"
-    },
-    "extra": {
-        "asset-installer-paths": {
-            "npm-asset-library": "vendor/npm",
-            "bower-asset-library": "vendor/bower"
+        "preferred-install": "dist",
+        "fxp-asset": {
+            "installer-paths": {
+                "npm-asset-library": "vendor/npm",
+                "bower-asset-library": "vendor/bower"
+            }
         }
     }
 }
