change trntv/yii2-datetime-widget on beaten-sect0r/yii2-flatpickr

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "type": "project",
     "license": "BSD-3-Clause",
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.4.0",
         "ext-intl": "*",
@@ -22,6 +22,7 @@
         "yiisoft/yii2-swiftmailer": "*",
         "vlucas/phpdotenv": "*",
         "beaten-sect0r/yii2-db-manager": "*",
+        "beaten-sect0r/yii2-flatpickr": "*",
         "samdark/sitemap": "*",
         "developeruz/yii2-db-rbac": "*",
         "vova07/yii2-imperavi-widget": "*",
@@ -29,7 +30,6 @@
         "creocoder/yii2-taggable": "*",
         "2amigos/yii2-selectize-widget": "*",
         "mihaildev/yii2-elfinder": "*",
-        "trntv/yii2-datetime-widget": "*",
         "loveorigami/yii2-notification-wrapper": "*",
         "bower-asset/admin-lte": "*",
         "bower-asset/html5shiv": "*",
