added maintenance mode to env config

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,10 @@ STORAGE_URL = http://storage.yii2-core.dev
 TIMEZONE = UTC
 LANGUAGE = en-US
 
+MAINTENANCE_MODE = false
+MAINTENANCE_MODE_MESSAGE = 'Sorry, perform technical works.'
+MAINTENANCE_MODE_TIME = '0000-00-00 00:00:00'
+
 FRONTEND_COOKIE_VALIDATION_KEY = <generated_key>
 BACKEND_COOKIE_VALIDATION_KEY = <generated_key>
 
