switched to asset-packagist https://github.com/yiisoft/yii2-app-advanced/commit/4a892a65c122bcea294fd93fc4fb860b2789dd58

--- a/composer.json
+++ b/composer.json
@@ -47,13 +47,12 @@
     },
     "config": {
         "process-timeout": 1800,
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "fxp-asset": {
-            "installer-paths": {
-                "npm-asset-library": "vendor/npm",
-                "bower-asset-library": "vendor/bower"
-            }
+        "optimize-autoloader": true
+    },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
         }
-    }
+    ]
 }
