Replaced .dev and .local with .loc
- .dev was bought by Google and Chrome started redirecting it to HTTPS

--- a/vagrant/nginx/app.conf
+++ b/vagrant/nginx/app.conf
@@ -7,7 +7,7 @@ server {
     listen 80; ## listen for ipv4
     #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
 
-    server_name yii2-core.dev;
+    server_name yii2-core.loc;
     root /app/frontend/web/;
     index index.php;
 
@@ -47,7 +47,7 @@ server {
     listen 80; ## listen for ipv4
     #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
 
-    server_name backend.yii2-core.dev;
+    server_name backend.yii2-core.loc;
     root /app/backend/web/;
     index index.php;
 
@@ -87,7 +87,7 @@ server {
     listen 80; ## listen for ipv4
     #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
 
-    server_name storage.yii2-core.dev;
+    server_name storage.yii2-core.loc;
     root /app/storage/;
     index index.php;
 
@@ -127,7 +127,7 @@ server {
     listen 80; ## listen for ipv4
     #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
 
-    server_name pma.yii2-core.dev;
+    server_name pma.yii2-core.loc;
     root /app/phpmyadmin/;
     index index.php;
 
