--- a/.env.example
+++ b/.env.example
@@ -12,9 +12,9 @@ DB_TABLE_PREFIX =
 
 # Urls
 # ----
-FRONTEND_URL = http://yii2-core.dev
-BACKEND_URL = http://backend.yii2-core.dev
-STORAGE_URL = http://storage.yii2-core.dev
+FRONTEND_URL = http://yii2-core.loc
+BACKEND_URL = http://backend.yii2-core.loc
+STORAGE_URL = http://storage.yii2-core.loc
 
 # Other
 # -----
@@ -28,7 +28,7 @@ MAINTENANCE_MODE_TIME = '0000-00-00 00:00:00'
 FRONTEND_COOKIE_VALIDATION_KEY = <generated_key>
 BACKEND_COOKIE_VALIDATION_KEY = <generated_key>
 
-ADMIN_EMAIL = admin@yii2-core.dev
-ROBOT_EMAIL = robot@yii2-core.dev
+ADMIN_EMAIL = admin@yii2-core.loc
+ROBOT_EMAIL = robot@yii2-core.loc
 
 LINK_ASSETS = false
