--- a/composer.json
+++ b/composer.json
@@ -29,13 +29,13 @@
         "2amigos/yii2-selectize-widget": "*",
         "mihaildev/yii2-elfinder": "*",
         "loveorigami/yii2-notification-wrapper": "*",
-        "bower-asset/admin-lte": "*",
-        "bower-asset/html5shiv": "*",
-        "bower-asset/timecircles": "*",
-        "bower-asset/font-awesome": "~4.7.0",
+        "bower-asset/admin-lte": "^2.0",
+        "bower-asset/font-awesome": "^4.0",
+        "bower-asset/jquery-slimscroll": "^1.3",
+        "bower-asset/html5shiv": "^3.0",
         "bower-asset/open-sans-fontface": "*",
         "bower-asset/highlightjs": "*",
-        "bower-asset/jquery-slimscroll": "*"
+        "bower-asset/timecircles": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "*",
